# Miriyaki-XT

./: .gitignore  CMakeLists.txt
resource/: MirWavetableData.cpp  MirWavetableData.hpp
source/: DistrhoPluginInfo.h  VST2.4_Compatibility.hpp  cEnvelope.h  cFilter.h  cGlobFilter.h  cGlobals.cpp  cGlobals.h  cLFO.h  cModulation.h  cOscillator.h  cParameter.cpp  cParameter.h  cVoice.h  cWaveform.cpp  cWaveform.h  functions.cpp  functions.h  mirsynth.cpp  mirsynth.h  mirsynthDPF.cpp  mirsynthproc.cpp  modulationConstants.h
